# skillview

./: .gitignore  Cargo.toml  DESIGN.md  README.md  agents_onboarding.md
crates/skillview/: Cargo.toml  README.md
crates/skillview/src/: classify.rs  emit.rs  lib.rs  main.rs  minhash.rs  model.rs  parse.rs  scan.rs  usage.rs
crates/skillview/tests/: cli_agents_roots_stats.rs  cli_dups.rs  cli_help.rs  cli_list_filters.rs  cli_list_sort_format.rs  cli_scan_examples.rs  cli_show.rs  cli_usage.rs
crates/skillview/tests/fixtures/home/.agents/skills/generic-thing/: SKILL.md
crates/skillview/tests/fixtures/home/.claude/projects/test-proj/: log.jsonl
crates/skillview/tests/fixtures/home/.claude/skills/agent-browser/: SKILL.md
crates/skillview/tests/fixtures/home/.claude/skills/bad-skill/: SKILL.md
crates/skillview/tests/fixtures/home/.claude/skills/data-analyst/: SKILL.md
crates/skillview/tests/fixtures/home/.claude/skills/near-recipe/: SKILL.md
crates/skillview/tests/fixtures/home/.claude/skills/secondary-example/: skill.md
crates/skillview/tests/fixtures/home/.claude/skills/short/: SKILL.md
crates/skillview/tests/fixtures/home/.codex/sessions/abc/: session.jsonl
crates/skillview/tests/fixtures/home/.codex/skills/codex-helper/: SKILL.md
crates/skillview/tests/fixtures/home/.codex/skills/dup-recipe/: SKILL.md
crates/skillview/tests/fixtures/home/.codex/skills/near-recipe/: SKILL.md
crates/skillview/tests/fixtures/home/.cursor/skills-cursor/cursor-thing/: SKILL.md
crates/skillview/tests/fixtures/home/orphan/skills/orphan-skill/: SKILL.md
crates/skillview/tests/support/: mod.rs
(+20 files in other folders)
