[workspace]
resolver = "2"
members = ["crates/skillview"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/galElmalah/skillview"
homepage = "https://github.com/galElmalah/skillview"
authors = ["Gal Elmalah <galelmalah@gmail.com>"]
rust-version = "1.75"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
