[package]
name = "skillview"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Inventory agent skills (SKILL.md and friends) across Claude, Codex, Cursor, and project-local roots. Detects near-duplicates and cross-agent usage. Ships an agent-friendly CLI; an OpenTUI frontend is opt-in via --tui."
readme = "README.md"
keywords = ["skills", "agents", "claude", "codex", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[[bin]]
name = "skillview"
path = "src/main.rs"

[lib]
name = "skillview"
path = "src/lib.rs"

[dependencies]
aho-corasick = "1.1"
anyhow = "1"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
ignore = "0.4"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting", "macros"] }
twox-hash = "1.6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
